# varnam-fcitx5

./: .gitignore  CMakeLists.txt  README.md  com.varnamproject.Fcitx5.Addon.varnamfcitx.metainfo.xml.in  meson.build  meson.options  meson_options.txt
.github/workflows/: cmake_build.yml  meson_cpp.yml
icons/: CMakeLists.txt  LICENSE.md  meson.build
src/: CMakeLists.txt  meson.build  varnam_candidate.cpp  varnam_candidate.h  varnam_config.h  varnam_engine.cpp  varnam_engine.h  varnam_state.cpp  varnam_state.h  varnam_utils.cpp  varnam_utils.h  varnamfcitx-addon.conf  varnamfcitx-addon.conf.in  varnamfcitx.conf
